# google-ddns

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.json  docker-compose.yml
.github/workflows/: docker.yml
package/: install-zig.sh
src/: auth.rs  config.rs  dns.rs  ip.rs  main.rs  rng.rs
