[package]
name = "google-ddns"
version = "0.1.0"
edition = "2024"
description = "Minimal Google Cloud DNS dynamic updater"
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# native-tls-vendored builds a bundled OpenSSL so we cross-compile to musl
# without needing the `ring` C crate (which fails on aarch64-musl).
# We deliberately do NOT enable `json` (which would pull serde/serde_json);
# bodies are sent as raw strings with an explicit Content-Type header.
ureq = { version = "3", default-features = false, features = [
    "native-tls",
    "vendored",
] }
miniserde = "0.1"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
pem = "3"
rand_core = "0.6"
log = "0.4"
env_logger = "0.11"
